--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,16 @@
-# Dependencies
+# Ignore development files for GitHub Pages
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Production builds
-dist/
-build/
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Editor directories and files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Logs
-logs
-*.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-
-# Replit specific
+server/
+client/
+shared/
+attached_assets/
+package*.json
+tsconfig.json
+vite.config.ts
+tailwind.config.ts
+postcss.config.js
+drizzle.config.ts
+components.json
+myint-store.html
 .replit
-.replit.nix
-.breakpoints
-replit.nix
-
-# Temporary files
-tmp/
-temp/
+*.log
